# lait

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  build.rs  deny.toml  dist-workspace.toml  docker-compose.yml  rust-toolchain.toml
.claude-plugin/: marketplace.json  plugin.json
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/scripts/: archive-unix.sh  archive-windows.sh
.github/workflows/: build-binaries.yml  ci.yml  dev-release.yml  perf.yml  publish-crates.yml  publish-homebrew.yml  publish-sbom.yml  publish-scoop.yml  publish-signatures.yml  publish-winget.yml  release.yml
benchmarks/: issues-reference.json
ci/: portability-guard.sh  replica-boundary-guard.sh  validate-dto-schema.py
crates/comms/: Cargo.toml
crates/fabric/: Cargo.toml
crates/journal/: Cargo.toml
crates/journal/src/: lib.rs
crates/journal/tests/: journal_child_crash.rs  journal_faults.rs
crates/lait-engine/: Cargo.toml
crates/lait-engine/src/: catalog.rs  history.rs  issue.rs  lib.rs  loro_ext.rs  membership.rs  op.rs  store.rs
crates/lait-fabric/: Cargo.toml
crates/lait-fabric/src/: catalog.rs  fabric.rs  history.rs  issue.rs  journal.rs  lib.rs  loro_ext.rs  membership.rs  op.rs  store.rs
crates/lait-fabric/tests/: collaborative_convergence.rs  journal_faults.rs
crates/lait-kernel/: Cargo.toml
crates/lait-kernel/src/: acl.rs  actor.rs  authority.rs  authz.rs  compile.rs  crypto.rs  custody.rs  dkg.rs  dto.rs  expand.rs  gaccess.rs  gdkg.rs  genesis.rs  handover.rs  ids.rs  lib.rs  policy.rs  refresh.rs  reshare.rs  sigdag.rs  space.rs  status.rs  transition.rs
crates/lait-net/: Cargo.toml
crates/lait-net/src/: iroh.rs  lib.rs  mem.rs  policy.rs
crates/lait-net/tests/: identity_interop.rs  policy.rs  transport.rs
crates/mechanics/: Cargo.toml
crates/mechanics/src/: acl.rs  actor.rs  authority.rs  authz.rs  ceremony.rs  compile.rs  crypto.rs  custody.rs  demand.rs  dkg.rs  dto.rs  expand.rs  gaccess.rs  gdkg.rs  genesis.rs  handover.rs  ids.rs  ledger.rs  lib.rs  policy.rs  reshare.rs  secretfs.rs  sigdag.rs  status.rs
crates/mechanics/tests/: authority_checkpoint.rs  ceremony_frontier_isolation.rs  mechanics_sparse_ceremony.rs  world_policy.rs
crates/replica/: Cargo.toml
crates/replica/src/: algebra.rs  body.rs  convergence.rs  frontier.rs  ids.rs  lib.rs  manifest.rs  marker.rs  protected.rs  receipt.rs  replica.rs  transaction.rs
crates/replica/tests/: algebra_fixtures.rs  canonical_ids.rs  canonical_store.rs  concurrent_heads.rs  manifest_atomicity.rs  manifest_fixtures.rs  quotas_and_bundle.rs  transaction_marker_fixtures.rs
crates/runtime/: Cargo.toml
crates/runtime/schema/: dto.examples.json  dto.schema.json
crates/runtime/src/: action.rs  beacon.rs  contact.rs  contact_driver.rs  coordinates.rs  dispatch_tests.rs  dto.rs  error.rs  implementation.rs  lib.rs  lifecycle.rs  neighbor_presence.rs  neighbors.rs  registry.rs  session.rs  store.rs  wire.rs  world.rs
crates/runtime/tests/: adoption.rs  beacon_presence_fixtures.rs  contact_fixtures.rs  contact_iroh.rs  contact_mem.rs  coordinates_fixtures.rs  dto_schema.rs  independent_world.rs  observations.rs  public_lifecycle_api.rs  two_node_convergence.rs
docs/: AGENT-EXPERIENCE.md  ARCHITECTURE.md  DATA-CONTRACT.md  GUIDED-JOIN.md  HARDENING.md  INSTALL.md  PROTOCOL.md  README.md  RELEASE-SIGNING.md  RELEASES.md  ROADMAP.md  SCHEMA.md  SERVE.md  THREAT-MODEL.md  UI.md  lait-release-key.asc
hooks/: hooks.json
packaging/: README.md
packaging/scoop/: lait.json
packaging/winget/: NixieTechLLC.Lait.installer.yaml  NixieTechLLC.Lait.locale.en-US.yaml  NixieTechLLC.Lait.yaml
schema/: product-policy.examples.json  product-policy.schema.json
skills/groupchat/: SKILL.md
skills/lait/: SKILL.md
src/: acl.rs  actor.rs  app.rs  authz.rs  catalog.rs  cli.rs  cmdspec.rs  config.rs  control.rs  crypto.rs  daemon_spawn.rs  diagnose.rs  dkg.rs  doctor.rs  dto.rs  ids.rs  inbox.rs  index.rs  install.rs  lib.rs  list_picker.rs  main.rs  mcp.rs  members_ui.rs  membership.rs  net.rs  node.rs  orbital.rs  presence.rs  proto.rs  registry.rs  secretfs.rs  sigdag.rs  space.rs  spaces.rs  store.rs  sync.rs  tracker.rs  workspaces.rs
src/engine/: catalog.rs  history.rs  issue.rs  membership.rs  mod.rs  op.rs
src/orbital/: ceremony.rs  daemon.rs  mechanics.rs  mod.rs
src/replica/: change.rs  devices.rs  dispatch.rs  error.rs  keyring.rs  lifecycle.rs  membership.rs  mod.rs  mutate.rs  outcome.rs  project.rs  recovery.rs  sync.rs  tests.rs
src/serve/: auth.rs  mod.rs  policy.rs  shell.rs  spaces.rs
src/transport/: iroh.rs  mem.rs  mod.rs
src/tui/: action.rs  app.rs  event.rs  keymap.rs  mod.rs  palette.rs  theme.rs  util.rs
src/world/: contract.rs  issues.rs  mod.rs  roles.rs  router.rs  views.rs  workflow.rs
tests/: agent_experience.rs  authority_history.rs  beacon_convergence.rs  clean_break_allowlist.tsv  cli_parse.rs  cli_safety.rs  cli_surfaces.rs  control_classification.rs  control_plane.rs  convergence.rs  daemon_mem.rs  frost_interop.rs  guided_join.rs  hermetic_net.rs  identity_interop.rs  invite_autoapprove.rs  invite_ergonomics.rs  issues_policy_designer.rs  issues_reference_perf.rs  issues_world_cache.rs  mcp_parity.rs  mixed_root_guard.rs  orbital_admission.rs  orbital_adoption.rs  orbital_boundaries.rs  orbital_catalog.rs  orbital_ceremonies.rs  orbital_clean_break.rs  orbital_concurrent_catalog.rs  orbital_daemon.rs  orbital_daemon_lifecycle.rs  orbital_guards.rs  orbital_join.rs  orbital_join_iroh.rs  orbital_product_parity.rs  orbital_router.rs  orbital_two_node.rs  product_features.rs  product_schema.rs  restart_reconnect.rs  (+5 more)
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
viewer/scripts/: dev.mjs
viewer/server/: api.ts  lait.ts
viewer/src/: App.tsx  api.ts  app.css  doorbell.ts  main.tsx  projectStore.test.ts  projectStore.tsx  styles.css  types.ts  ui.tsx
(+138 files in other folders)
