[package]
name = "lait"
version = "0.4.4"
edition = "2021"
# MSRV: driven by iroh 1.0.0-rc.1, which requires rustc 1.91.
rust-version = "1.91"
description = "A local-first, peer-to-peer, end-to-end-encrypted issue tracker built on iroh + Loro CRDTs"
authors = ["onnixi <omar@onnixi.com>"]
license = "MIT OR Apache-2.0"
# GitHub is the canonical home: source of record, release host, and issue tracker.
repository = "https://github.com/Nixie-Tech-LLC/lait"
homepage = "https://github.com/Nixie-Tech-LLC/lait"
readme = "README.md"
keywords = ["iroh", "p2p", "gossip", "crdt", "issue-tracker"]
categories = ["command-line-utilities", "network-programming"]
# Keep the published crate lean: ship the crate sources, docs, and licenses;
# drop the web viewer, packaging scaffolding, CI, and editor/agent tooling that
# only matter in the repo. (`target/` and `.git/` are always excluded by cargo.)
exclude = [
    "viewer/",
    "packaging/",
    "ci/",
    "hooks/",
    "skills/",
    ".github/",
    ".githooks/",
    ".claude/",
    ".claude-plugin/",
    "dist-workspace.toml",
    "Dockerfile",
    "docker-compose.yml",
    ".dockerignore",
]

# `cargo binstall lait` — fetch the prebuilt cargo-dist release archive from
# GitHub instead of compiling. The URL/layout below matches what cargo-dist
# publishes: `lait-<target>.tar.gz` (unix) / `.zip` (windows), a FLAT archive
# with the binary at its root (verified against `dist build` output).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[lib]
name = "lait"
path = "src/lib.rs"

[[bin]]
name = "lait"
path = "src/main.rs"

[dependencies]
# Loro CRDT — the storage/truth layer (Layer A). Issue docs + the catalog doc.
loro = "=1.13.6"
# randomness for ULID minting (app-minted DocId/ProjectId/… ids).
getrandom = "0.3"

# TUI (ratatui + crossterm) — the interactive board client. crossterm is the
# portable backend (all three OSes), matching the cross-platform bar.
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# E2EE (P3) — all pure-Rust (RustCrypto/dalek), no C toolchain, no aws-lc:
# ed25519 signing for the ACL op-graph, X25519 sealed boxes for workspace-key
# distribution (ed25519→x25519 conversion), ChaCha20-Poly1305 AEAD for the
# encrypted sync payloads (the blind-relay envelope).
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
sha2 = "0.10"
# iroh core + gossip (the room/announce transport). iroh-blobs returns at P2 for
# snapshots/attachments. All pin iroh =1.0.0-rc.1.
iroh = "=1.0.0-rc.1"
iroh-base = "=1.0.0-rc.1"
iroh-gossip = "0.100"

# async runtime + streams
tokio = { version = "1", features = ["full"] }
n0-future = "0.3"

# cli
clap = { version = "4", features = ["derive"] }
# `lait completions <shell>` and `lait man` — generated at runtime from the same
# clap command tree, so packagers (Homebrew/Scoop/etc.) can emit shell
# completions and a man page during install with no separate spec to drift.
clap_complete = "4"
clap_mangen = "0.2"

# serialization: serde_json for state/control protocol, postcard for wire messages
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
serde-byte-array = "0.1"
bytes = "1"
data-encoding = "2.6"
blake3 = "1"

# cross-platform local IPC for the daemon control channel: a Unix-domain socket
# on unix, a named pipe on Windows — same API, so the daemon/CLI/MCP are portable.
interprocess = { version = "2", features = ["tokio"] }
# cross-platform advisory file lock for the single-instance daemon guard
# (replaces the unix-only flock(2)).
fs2 = "0.4"

# misc
anyhow = "1"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# mcp server (stdio)
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
# Native `lait update`: GitHub-release self-updater. `ureq` backend + `rustls`
# keeps it pure-Rust (no reqwest/native-tls/OpenSSL C dep); gzip/zip extraction
# only (no xz), matching the `.tar.gz` release archives.
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# unix-only: reset SIGPIPE to default so piping CLI output to head/less/grep
# exits cleanly instead of panicking (Rust ignores SIGPIPE by default). Already
# present transitively (tokio); declared directly for the startup reset in app.rs.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# property-based convergence testing (random op sequences across N peers).
proptest = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
