[package]
name = "lait"
version = "0.5.0"
edition = "2021"
# MSRV: driven by iroh 1.0.0-rc.1, which requires rustc 1.91.
rust-version = "1.91"
description = "A local-first, peer-to-peer, end-to-end-encrypted issue tracker built on iroh + Loro CRDTs"
authors = ["onnixi <omar@onnixi.com>"]
license = "MIT OR Apache-2.0"
# GitHub is the canonical home: source of record, release host, and issue tracker.
repository = "https://github.com/Nixie-Tech-LLC/lait"
homepage = "https://github.com/Nixie-Tech-LLC/lait"
readme = "README.md"
keywords = ["iroh", "p2p", "gossip", "crdt", "issue-tracker"]
categories = ["command-line-utilities", "network-programming"]
# Keep the published crate lean: ship the crate sources, docs, and licenses;
# drop the web viewer, packaging scaffolding, CI, and editor/agent tooling that
# only matter in the repo. (`target/` and `.git/` are always excluded by cargo.)
exclude = [
    "viewer/",
    "packaging/",
    "ci/",
    "hooks/",
    "skills/",
    ".github/",
    ".githooks/",
    ".claude/",
    ".claude-plugin/",
    "dist-workspace.toml",
    "Dockerfile",
    "docker-compose.yml",
    ".dockerignore",
]

# `cargo binstall lait` — fetch the prebuilt cargo-dist release archive from
# GitHub instead of compiling. The URL/layout below matches what cargo-dist
# **actually** publishes (verified against the released v0.4.8 assets), which is
# per-OS, NOT flat everywhere: the unix `.tar.gz` archives nest the binary under
# a `lait-<target-triple>/` directory, while the Windows `.zip` is flat with
# `lait.exe` at the archive root. `bin-dir` must reflect that per-OS shape — the
# same layout the self-updater encodes in `update_bin_path_in_archive` (app.rs).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
# Windows `.zip` is flat: `lait.exe` at the root, no nesting directory.
bin-dir = "{ bin }{ binary-ext }"

[lib]
name = "lait"
path = "src/lib.rs"

[[bin]]
name = "lait"
path = "src/main.rs"

[dependencies]
# Loro CRDT — the storage/truth layer (Layer A). Issue docs + the catalog doc.
loro = "=1.13.6"
# randomness for ULID minting (app-minted DocId/ProjectId/… ids).
getrandom = "0.3"

# Terminal rendering for the inline `lait members` picker (`members_ui`), and the
# width probe the invite QR uses. The full-screen TUI these were introduced for is
# gone — the browser is the interactive surface now (docs/SERVE.md) — but the
# members picker is a CLI ergonomic in its own right, so both stay.
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# E2EE (P3) — all pure-Rust (RustCrypto/dalek), no C toolchain, no aws-lc:
# ed25519 signing for the ACL op-graph, X25519 sealed boxes for workspace-key
# distribution (ed25519→x25519 conversion), ChaCha20-Poly1305 AEAD for the
# encrypted sync payloads (the blind-relay envelope).
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
sha2 = "0.10"
# iroh core + gossip (the room/announce transport). iroh-blobs returns at P2 for
# snapshots/attachments. All pin iroh =1.0.0-rc.1.
iroh = "=1.0.0-rc.1"
iroh-base = "=1.0.0-rc.1"
iroh-gossip = "0.100"

# async runtime + streams
tokio = { version = "1", features = ["full"] }
n0-future = "0.3"

# cli
clap = { version = "4", features = ["derive"] }
# terminal QR for `lait invite --qr`. Pure-Rust; default features off to avoid
# pulling the `image` crate (we only render unicode half-blocks).
qrcode = { version = "0.14", default-features = false }
# `lait completions <shell>` and `lait man` — generated at runtime from the same
# clap command tree, so packagers (Homebrew/Scoop/etc.) can emit shell
# completions and a man page during install with no separate spec to drift.
clap_complete = "4"
clap_mangen = "0.2"

# serialization: serde_json for state/control protocol, postcard for wire messages
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
serde-byte-array = "0.1"
bytes = "1"
data-encoding = "2.6"
blake3 = "1"

# cross-platform local IPC for the daemon control channel: a Unix-domain socket
# on unix, a named pipe on Windows — same API, so the daemon/CLI/MCP are portable.
interprocess = { version = "2", features = ["tokio"] }
# cross-platform advisory file lock for the single-instance daemon guard
# (replaces the unix-only flock(2)).
fs2 = "0.4"

# misc
anyhow = "1"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# `lait serve` — the local HTTP surface (SERVE.md). axum is a thin router over
# hyper + tower + http, all three of which are already in the tree transitively
# (iroh, self_update), so the adapter buys routing and SSE rather than a new
# stack. `tokio-stream`'s `sync` feature is the `broadcast::Receiver` -> `Stream`
# bridge the doorbell multiplex needs.
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
# The web client, compiled into the binary. `include_dir` reads `src/serve/assets`
# at compile time, which is why the built bundle is COMMITTED and lives under
# `src/` rather than in the excluded `viewer/`: `cargo install lait` must not need
# npm (same reproducibility bar `build.rs` holds by never shelling out to git),
# and the published crate drops `viewer/` entirely. See docs/SERVE.md.
include_dir = "0.7"

# mcp server (stdio)
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
# Already in the tree via rmcp (which `mcp.rs` derives against). Declared directly
# so `control::Request` can describe its own shape, which is what lets
# `tests/viewer_parity.rs` check the hand-written TS mirror against it instead of
# trusting it. Same "generate/check, don't hand-maintain twice" rule as
# `mcp_parity.rs`.
schemars = "1"
# Native `lait update`: GitHub-release self-updater. `ureq` backend + `rustls`
# keeps it pure-Rust (no reqwest/native-tls/OpenSSL C dep); gzip/zip extraction
# only (no xz), matching the `.tar.gz` release archives.
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# unix-only: reset SIGPIPE to default so piping CLI output to head/less/grep
# exits cleanly instead of panicking (Rust ignores SIGPIPE by default). Already
# present transitively (tokio); declared directly for the startup reset in app.rs.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# windows-only: keep our handles ours. `CreateProcess` inherits all-or-nothing,
# so the daemon we spawn would otherwise come up holding a captured caller's
# stdout pipe and never let it see EOF. Needs `SetHandleInformation` (clear the
# inherit flag on our own stdio — `disinherit_stdio` in app.rs) and
# `CreateProcessW` + `PROC_THREAD_ATTRIBUTE_HANDLE_LIST` (inherit exactly the
# three handles we name — `daemon_spawn`), which std only exposes as an unstable
# feature. Already present transitively (iroh/tokio); declared directly for those.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
# property-based convergence testing (random op sequences across N peers).
proptest = "1"
# `ServiceExt::oneshot` — drive `serve`'s real router in-process, so the gate's
# ordering and precedence are tested through the thing that implements them
# rather than a copy of it. No port, no daemon.
tower = { version = "0.5", features = ["util"] }
# Ground truth for the self-updater's archive layout: the `#[ignore]`d
# `update_bin_path_is_a_real_entry_in_the_published_archives` reads the REAL
# published release archives (CI downloads them; see the `updater-contract` job),
# so the path handed to self_update is checked against the bytes users actually
# download rather than against our own model of cargo-dist's conventions — the
# model is what was wrong in v0.4.8/v0.5.0. All three already build as part of
# `self_update`, so they add no meaningful compile cost.
flate2 = "1"
tar = "0.4"
# `deflate` only — the same codec `self_update`'s `compression-zip-deflate`
# turns on, and all cargo-dist's zip uses. The default feature set drags in
# aes/bzip2/zstd/lzma for codecs no release archive contains.
zip = { version = "6", default-features = false, features = ["deflate"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
