[package]
name = "lait-engine"
version = "0.5.2"
edition = "2021"
rust-version = "1.91"
description = "The lait engine: the convergence scaffold (Loro) sealed behind typed wrappers. The ONLY crate that names loro."
license = "MIT OR Apache-2.0"

[dependencies]
# lait's roots — the engine wraps the scaffold in lait's own types.
lait-kernel = { path = "../lait-kernel" }
# The convergence scaffold. This is the only crate in the workspace that lists
# it, so `loro::*` is nameable here and nowhere else — the seal is the manifest.
loro = "=1.13.6"
# durable persistence + signed-op encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
data-encoding = "2.6"
anyhow = "1"
getrandom = "0.3"

[dev-dependencies]
# a membership test constructs a raw signing key to forge an op author.
ed25519-dalek = "2"
