[package]
name = "lait-kernel"
version = "0.6.0"
edition = "2021"
rust-version = "1.91"
description = "The lait kernel: identity, trust regimes, and derivation rules — the roots lait grows from, depending on no scaffold (no Loro, no iroh)."
license = "MIT OR Apache-2.0"

[lints.rust]
# Nothing from a scaffold may be named here. This crate lists neither loro nor
# iroh in its manifest, so `use loro::…` / `use iroh::…` cannot compile — the
# boundary is the dependency edge, enforced by rustc, not by review.

[dependencies]
# identity + signatures
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
sha2 = "0.10"
blake3 = "1"
# Password-based key derivation for the passphrase unlock slot on a portable
# share package. Memory-hard by design: blake3's derive_key is a KDF, not a
# PASSWORD KDF, and using it here would make an offline guessing attack cheap.
# Pure Rust (RustCrypto), consistent with the no-C-toolchain rule.
argon2 = "0.5"
# threshold recovery ceremony (dealer-free DKG + signing)
frost-ed25519 = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.3"
# serialization of signed bytes + wire/DTO types
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
data-encoding = "2.6"
anyhow = "1"

[dev-dependencies]
# dto's serialization doctests/round-trips only.
serde_json = "1"
