[package]
name = "replica"
version = "0.6.0"
edition = "2021"
rust-version = "1.91"
description = "LAIT Replica semantics: Body identity, schemas, descriptors, semantic frontiers, transaction plans, incorporation, and Convergence — above mechanics and Fabric, naming neither Loro nor any product/consumer type."
license = "MIT OR Apache-2.0"

[dependencies]
# mechanics — identity, authority, custody, key legitimacy. Replica combines
# these facts with Fabric durability into orbital Replica semantics.
lait-kernel = { path = "../lait-kernel" }
# fabric — the sealed Loro component. Replica translates validated semantic
# plans into Fabric requests and advances its frontier only from a Fabric commit
# receipt. `loro` is intentionally ABSENT from this manifest: the seal is the
# dependency edge, so `loro::*` cannot be named here.
lait-fabric = { path = "../lait-fabric" }

serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
data-encoding = "2.6"
getrandom = "0.3"
anyhow = "1"

[dev-dependencies]
serde_json = "1"
